# Music-Recommendation-System-with-GenAI-and-XAI

./: README.md  main.py  pyproject.toml  requirements.txt
SE_miniproject/Mini project/: Datarecommendor.ipynb  MiniProject.ipynb
SE_miniproject/miniproject/: db.sqlite3
SE_miniproject/miniproject/UI/: urls.py  views.py
app/: config.py  data_loader.py  feature_engg.py  main.py  preprocessing.py  utils.py
app/analytics/: __init__.py  charts.py  diversity.py  insights.py  metrics.py
app/recommenders/: collaborative.py  content_based.py  hybrid.py  popularity.py
app/services/: feature_service.py  similarity_service.py
app/xai/: explainer.py  feature_similarity.py
