[project]
name = "xai-on-music-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.0.1",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "python-dotenv==1.1.1",
    "scikit-learn==1.5.1",
    "spotipy==2.25.1",
    "streamlit==1.37.1",
]
